--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,9 @@ theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
+
+excerpt_separator: "<!--more-->"
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
