--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,8 @@ description: > # this means to ignore newlines until "baseurl:"
 twitter_username: zxhfirefox
 github_username: zxhfirefox
 
+paginate: 5
+
 # Build settings
 markdown: kramdown
 theme: jekyll-theme-cayman
